--- a/sort-color.cabal
+++ b/sort-color.cabal
@@ -20,6 +20,8 @@ executable sort-color
     main-is:          Main.hs
     -- other-modules:
     -- other-extensions:
-    build-depends:    base ^>=4.18.2.1
+    build-depends:    base ^>=4.18.2.1,
+    		      directory,
+		      filepath
     hs-source-dirs:   app
     default-language: GHC2021
