--- a/sort-color.cabal
+++ b/sort-color.cabal
@@ -9,7 +9,7 @@ author:             araujoviana
 maintainer:         63423848+araujoviana@users.noreply.github.com
 -- copyright:
 build-type:         Simple
-extra-doc-files:    CHANGELOG.md
+-- extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
