Increase isolateArgs readability

--- a/sort-color.cabal
+++ b/sort-color.cabal
@@ -25,6 +25,7 @@ executable sort-color
 		      filepath,
 		      bytestring,
 		      split,
+		      text,
 		      binary
     hs-source-dirs:   app
     default-language: GHC2021
